<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/create_create"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="75dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_weight="70"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/create_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="fill_parent"
                    android:layout_weight="30"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:lines="2"
                    android:layout_gravity="right"
                    android:inputType="textMultiLine"
                    android:text="@string/create_name" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:layout_weight="70"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/create_description"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_weight="30"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:lines="4"
                    android:layout_gravity="right"
                    android:inputType="textMultiLine"
                    android:text="@string/create_description" />


            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_create" />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>