<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Group Name" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_weight="20" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="80"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="\?/?" />


        </LinearLayout>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:background="@drawable/rect"
            android:text="I am progress" />
        <Button
            android:id="@+id/buttonedit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/manage_edit"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"/>
        <Button
            android:id="@+id/buttondelete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/manage_delete"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"/>
        <TextView
            android:id="@+id/memlist"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/view_list" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:background="@drawable/rect"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView41"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="ppl1" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="80"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="\?%" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:background="@drawable/rect"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView51"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="ppl2" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="80"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="\?%" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>